--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/node": "^22.14.0",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0"
   }
 }
